fixed form layout issue

--- a/pages/random/ppalbums-edit.module.css
+++ b/pages/random/ppalbums-edit.module.css
@@ -1,11 +1,8 @@
 .container {
-  height: 90vh;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow-y: scroll;
-  padding-top: 100px;
 }
 
 .container * {
